Correct path to the repo

--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.lapsa.maven.pom</groupId>
@@ -9,7 +10,7 @@
 
 	<groupId>com.lapsa.lapsa-lib</groupId>
 	<artifactId>parent</artifactId>
-	<version>1.0.0</version>
+	<version>1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Lapsa : Parent</name>
@@ -33,14 +34,14 @@
 	</dependencyManagement>
 
 	<scm>
-		<connection>scm:git:https://gitrepo.theeurasia.kz/lapsa/lapsafaces.git</connection>
-		<developerConnection>scm:git:https://gitrepo.theeurasia.kz/lapsa/lapsafaces.git</developerConnection>
-		<tag>v1.0.0</tag>
+		<connection>scm:git:https://gitrepo.theeurasia.kz/lapsa/lapsa-lib.git</connection>
+		<developerConnection>scm:git:https://gitrepo.theeurasia.kz/lapsa/lapsa-lib.git</developerConnection>
+		<tag>HEAD</tag>
 	</scm>
 
 	<issueManagement>
 		<system>gitlab</system>
-		<url>https://gitrepo.theeurasia.kz/lapsa/lapsafaces/issues</url>
+		<url>https://gitrepo.theeurasia.kz/lapsa/lapsa-lib/issues</url>
 	</issueManagement>
 
 </project>
