--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>com.lapsa.lapsa-lib</groupId>
 	<artifactId>parent</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Lapsa : Parent</name>
@@ -35,7 +35,7 @@
 	<scm>
 		<connection>scm:git:https://gitrepo.theeurasia.kz/lapsa/lapsa-lib.git</connection>
 		<developerConnection>scm:git:https://gitrepo.theeurasia.kz/lapsa/lapsa-lib.git</developerConnection>
-		<tag>v1.0.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<issueManagement>
