--- a/validation/pom.xml
+++ b/validation/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.lapsa.lapsa-lib</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>lapsa-validation</artifactId>
@@ -23,7 +23,7 @@
 	<scm>
 		<connection>scm:git:https://gitrepo.theeurasia.kz/lapsa/lapsa-lib.git</connection>
 		<developerConnection>scm:git:https://gitrepo.theeurasia.kz/lapsa/lapsa-lib.git</developerConnection>
-		<tag>v1.0.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<issueManagement>
