--- a/velocitytools/pom.xml
+++ b/velocitytools/pom.xml
@@ -67,6 +67,12 @@
 			<artifactId>velocity-tools</artifactId>
 			<scope>compile</scope>
 			<optional>false</optional>
+			<exclusions>
+				<exclusion>
+					<artifactId>servlet-api</artifactId>
+					<groupId>javax.servlet</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!-- Java EE -->
 		<dependency>
