--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 		<hibernate-validator.version>5.0.0.Final</hibernate-validator.version>
 		<velocity.version>1.7</velocity.version>
 		<velocity-tools.version>2.0</velocity-tools.version>
-		<international-lib.version>2.0.1-SNAPSHOT</international-lib.version>
+		<international-lib.version>2.0.1</international-lib.version>
 	</properties>
 
 	<dependencyManagement>
