--- a/pom.xml
+++ b/pom.xml
@@ -67,14 +67,14 @@
 	</dependencyManagement>
 
 	<scm>
-		<connection>scm:git:https://gitrepo.theeurasia.kz/lapsa/lapsa-lib.git</connection>
-		<developerConnection>scm:git:https://gitrepo.theeurasia.kz/lapsa/lapsa-lib.git</developerConnection>
+		<connection>scm:git:http://gitlab.lapsa.tech/lapsa/lapsa-lib.git</connection>
+		<developerConnection>scm:git:http://gitlab.lapsa.tech/lapsa/lapsa-lib.git</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
 
 	<issueManagement>
 		<system>gitlab</system>
-		<url>https://gitrepo.theeurasia.kz/lapsa/lapsa-lib/issues</url>
+		<url>http://gitlab.lapsa.tech/lapsa/lapsa-lib/issues</url>
 	</issueManagement>
 
 </project>
