--- a/cdiutils/pom.xml
+++ b/cdiutils/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.lapsa.lapsa-lib</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.2.1</version>
+		<version>1.2.2-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>lapsa-cdiutils</artifactId>
