--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
 	<scm>
 		<connection>scm:git:https://gitlab.lapsa.tech/lapsa/lapsa-lib.git</connection>
 		<developerConnection>scm:git:https://gitlab.lapsa.tech/lapsa/lapsa-lib.git</developerConnection>
-		<tag>v1.2.1</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<issueManagement>
