--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
 	<modules>
 		<module>hibernate-validation</module>
+		<module>validation</module>
 		<module>cdiutils</module>
 		<module>utils</module>
 		<module>faces</module>
@@ -24,12 +25,12 @@
 	</modules>
 
 	<properties>
-		<hibernate-validator.version>5.0.0.Final</hibernate-validator.version>
 		<velocity.version>1.7</velocity.version>
 		<velocity-tools.version>2.0</velocity-tools.version>
 		<international-lib.version>2.0.1</international-lib.version>
 		<!-- external -->
 		<primefaces.version>5.3.16</primefaces.version>
+		<hibernate-validator.version>5.1.3.Final</hibernate-validator.version>
 	</properties>
 
 	<dependencyManagement>
@@ -38,6 +39,11 @@
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>lapsa-hibernate-validation</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>${project.groupId}</groupId>
+				<artifactId>lapsa-validation</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -91,6 +97,11 @@
 				<groupId>org.primefaces</groupId>
 				<artifactId>primefaces</artifactId>
 				<version>${primefaces.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.glassfish.web</groupId>
+				<artifactId>javax.el</artifactId>
+				<version>2.2.6</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
