--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 		<!-- external -->
 		<primefaces.version>5.3.16</primefaces.version>
 		<hibernate-validator.version>5.1.3.Final</hibernate-validator.version>
+		<gf-embeded.el.version>2.2.6</gf-embeded.el.version>
 	</properties>
 
 	<dependencyManagement>
@@ -101,7 +102,7 @@
 			<dependency>
 				<groupId>org.glassfish.web</groupId>
 				<artifactId>javax.el</artifactId>
-				<version>2.2.6</version>
+				<version>${gf-embeded.el.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
