--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -13,6 +13,13 @@
 	<name>Lapsa : Utils</name>
 
 	<dependencies>
+		<!-- internal international -->
+		<dependency>
+			<groupId>com.lapsa.international-lib</groupId>
+			<artifactId>international-core</artifactId>
+			<scope>compile</scope>
+			<optional>false</optional>
+		</dependency>
 		<!-- Java EE -->
 		<dependency>
 			<groupId>javax.faces</groupId>
