--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
 	<modules>
 		<module>hibernate-validation</module>
+		<module>jersey-rest</module>
 		<module>validation</module>
 		<module>cdiutils</module>
 		<module>utils</module>
@@ -30,8 +31,10 @@
 		<international-lib.version>2.1.2</international-lib.version>
 		<!-- external -->
 		<primefaces.version>5.3.16</primefaces.version>
+		<!-- Glassfish -->
 		<hibernate-validator.version>5.1.3.Final</hibernate-validator.version>
 		<gf-embeded.el.version>2.2.6</gf-embeded.el.version>
+		<gf-embeded.jersey.version>2.10.4</gf-embeded.jersey.version>
 	</properties>
 
 	<dependencyManagement>
@@ -40,6 +43,11 @@
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>lapsa-hibernate-validation</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>${project.groupId}</groupId>
+				<artifactId>lapsa-jersey-rest</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -98,6 +106,12 @@
 				<groupId>org.primefaces</groupId>
 				<artifactId>primefaces</artifactId>
 				<version>${primefaces.version}</version>
+			</dependency>
+			<!-- Glassfish -->
+			<dependency>
+				<groupId>org.glassfish.jersey.ext</groupId>
+				<artifactId>jersey-bean-validation</artifactId>
+				<version>${gf-embeded.jersey.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.glassfish.web</groupId>
