--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 	<properties>
 		<velocity.version>1.7</velocity.version>
 		<velocity-tools.version>2.0</velocity-tools.version>
-		<international-lib.version>2.1.2</international-lib.version>
+		<international-lib.version>2.2-SNAPSHOT</international-lib.version>
 		<!-- external -->
 		<primefaces.version>5.3.16</primefaces.version>
 		<!-- Glassfish -->
@@ -80,7 +80,7 @@
 				<artifactId>lapsa-velocitytools</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-			<!-- internal -->
+			<!-- internal international -->
 			<dependency>
 				<groupId>com.lapsa.international-lib</groupId>
 				<artifactId>international-core</artifactId>
