--- a/hibernate-validation/pom.xml
+++ b/hibernate-validation/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.lapsa.lapsa-lib</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.5-SNAPSHOT</version>
+		<version>1.5</version>
 	</parent>
 
 	<artifactId>lapsa-hibernate-validation</artifactId>
