--- a/jersey-rest/pom.xml
+++ b/jersey-rest/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.lapsa.lapsa-lib</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.1-SNAPSHOT</version>
+		<version>2.1</version>
 	</parent>
 
 	<artifactId>lapsa-jersey-rest</artifactId>
