--- a/arquilliantools/pom.xml
+++ b/arquilliantools/pom.xml
@@ -14,6 +14,7 @@
 
 	<dependencyManagement>
 		<dependencies>
+			<!-- http://mvnrepository.com/artifact/org.jboss.arquillian/arquillian-bom -->
 			<dependency>
 				<groupId>org.jboss.arquillian</groupId>
 				<artifactId>arquillian-bom</artifactId>
@@ -25,7 +26,6 @@
 	</dependencyManagement>
 
 	<dependencies>
-		<!-- external -->
 		<dependency>
 			<groupId>org.jboss.shrinkwrap.resolver</groupId>
 			<artifactId>shrinkwrap-resolver-depchain</artifactId>
@@ -34,5 +34,115 @@
 			<optional>false</optional>
 		</dependency>
 	</dependencies>
+
+	<profiles>
+		<!-- TEST ENGINE -->
+		<!-- junit -->
+		<profile>
+			<id>junit</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<dependencies>
+				<!-- https://mvnrepository.com/artifact/org.jboss.arquillian.junit/arquillian-junit-container -->
+				<dependency>
+					<groupId>org.jboss.arquillian.junit</groupId>
+					<artifactId>arquillian-junit-container</artifactId>
+					<scope>compile</scope>
+					<optional>false</optional>
+				</dependency>
+				<dependency>
+					<groupId>junit</groupId>
+					<artifactId>junit</artifactId>
+					<scope>compile</scope>
+					<optional>false</optional>
+				</dependency>
+				<dependency>
+					<groupId>org.hamcrest</groupId>
+					<artifactId>hamcrest-all</artifactId>
+					<scope>compile</scope>
+					<optional>false</optional>
+				</dependency>
+			</dependencies>
+		</profile>
+		<!-- testng -->
+		<profile>
+			<id>testng</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<dependencies>
+				<!-- https://mvnrepository.com/artifact/org.jboss.arquillian.testng/arquillian-testng-container -->
+				<dependency>
+					<groupId>org.jboss.arquillian.testng</groupId>
+					<artifactId>arquillian-testng-container</artifactId>
+					<version>1.1.13.Final</version>
+					<scope>compile</scope>
+					<optional>false</optional>
+				</dependency>
+				<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+				<dependency>
+					<groupId>org.testng</groupId>
+					<artifactId>testng</artifactId>
+					<version>6.11</version>
+					<scope>compile</scope>
+					<optional>false</optional>
+				</dependency>
+			</dependencies>
+		</profile>
+
+		<!-- TEST CONTAINER -->
+		<!-- glassfish -->
+		<profile>
+			<id>glassfish</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<dependencies>
+				<!-- https://mvnrepository.com/artifact/org.jboss.arquillian.container/arquillian-glassfish-embedded-3.1 -->
+				<dependency>
+					<groupId>org.jboss.arquillian.container</groupId>
+					<artifactId>arquillian-glassfish-embedded-3.1</artifactId>
+					<version>1.0.1</version>
+					<scope>compile</scope>
+					<optional>false</optional>
+				</dependency>
+				<!-- https://mvnrepository.com/artifact/org.glassfish.main.extras/glassfish-embedded-all -->
+				<dependency>
+					<groupId>org.glassfish.main.extras</groupId>
+					<artifactId>glassfish-embedded-all</artifactId>
+					<version>4.1.2</version>
+					<scope>compile</scope>
+					<optional>false</optional>
+				</dependency>
+			</dependencies>
+		</profile>
+
+		<!-- payara -->
+		<profile>
+			<id>payara</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<dependencies>
+				<!-- https://mvnrepository.com/artifact/org.jboss.arquillian.container/arquillian-glassfish-embedded-3.1 -->
+				<dependency>
+					<groupId>org.jboss.arquillian.container</groupId>
+					<artifactId>arquillian-glassfish-embedded-3.1</artifactId>
+					<version>1.0.1</version>
+					<scope>compile</scope>
+					<optional>false</optional>
+				</dependency>
+				<!-- https://mvnrepository.com/artifact/fish.payara.extras/payara-embedded-all -->
+				<dependency>
+					<groupId>fish.payara.extras</groupId>
+					<artifactId>payara-embedded-all</artifactId>
+					<version>4.1.2.173.0.1</version>
+					<scope>compile</scope>
+					<optional>false</optional>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 
 </project>
