--- a/faces/pom.xml
+++ b/faces/pom.xml
@@ -15,7 +15,7 @@
 	<dependencies>
 		<!-- internal lapsa-commons -->
 		<dependency>
-			<groupId>com.lapsa.lapsa.commons</groupId>
+			<groupId>tech.lapsa.lapsa</groupId>
 			<artifactId>lapsa-commons</artifactId>
 			<scope>compile</scope>
 		</dependency>
