--- a/pom.xml
+++ b/pom.xml
@@ -23,18 +23,26 @@
 	</modules>
 
 	<properties>
-		<!-- APIs -->
-		<lapsa-commons.version>2.2-SNAPSHOT</lapsa-commons.version>
+		<!-- BOMS -->
+		<lapsa-bom.version>1.0-SNAPSHOT</lapsa-bom.version>
+		<lapsa-payara-bom.version>4.1.2-SNAPSHOT</lapsa-payara-bom.version>
 		<!-- external -->
 		<primefaces.version>5.3.16</primefaces.version>
 		<velocity.version>1.7</velocity.version>
 		<velocity-tools.version>2.0</velocity-tools.version>
 		<!-- tech -->
-		<lapsa-payara-bom.version>4.1.2-SNAPSHOT</lapsa-payara-bom.version>
 	</properties>
 
 	<dependencyManagement>
 		<dependencies>
+			<!-- BOMS -->
+			<dependency>
+				<groupId>tech.lapsa.lapsa</groupId>
+				<artifactId>lapsa-bom</artifactId>
+				<version>${lapsa-bom.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
 			<dependency>
 				<groupId>tech.lapsa.lapsa</groupId>
 				<artifactId>lapsa-payara-bom</artifactId>
@@ -43,16 +51,6 @@
 				<type>pom</type>
 			</dependency>
 			<!-- own -->
-			<dependency>
-				<groupId>${project.groupId}</groupId>
-				<artifactId>lapsa-hibernate-commons</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>${project.groupId}</groupId>
-				<artifactId>lapsa-jersey-rest</artifactId>
-				<version>${project.version}</version>
-			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>lapsa-validation</artifactId>
@@ -77,12 +75,6 @@
 				<groupId>${project.groupId}</groupId>
 				<artifactId>lapsa-velocitytools</artifactId>
 				<version>${project.version}</version>
-			</dependency>
-			<!-- internal lapsa-commons -->
-			<dependency>
-				<groupId>tech.lapsa.lapsa</groupId>
-				<artifactId>lapsa-commons</artifactId>
-				<version>${lapsa-commons.version}</version>
 			</dependency>
 			<!-- external -->
 			<dependency>
