--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 	<properties>
 		<!-- BOMS -->
 		<lapsa-bom.version>1.0-SNAPSHOT</lapsa-bom.version>
-		<lapsa-payara-bom.version>4.1.2-SNAPSHOT</lapsa-payara-bom.version>
+		<payara-bom.version>4.1.2-b1-SNAPSHOT</payara-bom.version>
 		<!-- external -->
 		<primefaces.version>5.3.16</primefaces.version>
 		<velocity.version>1.7</velocity.version>
@@ -44,9 +44,9 @@
 				<scope>import</scope>
 			</dependency>
 			<dependency>
-				<groupId>tech.lapsa.lapsa</groupId>
-				<artifactId>lapsa-payara-bom</artifactId>
-				<version>${lapsa-payara-bom.version}</version>
+				<groupId>tech.lapsa.payara</groupId>
+				<artifactId>payara-bom</artifactId>
+				<version>${payara-bom.version}</version>
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
