--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 
 	<groupId>com.lapsa.lapsa-lib</groupId>
-	<artifactId>parent</artifactId>
+	<artifactId>lapsa-root</artifactId>
 	<version>2.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
