--- a/velocitytools/pom.xml
+++ b/velocitytools/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.lapsa.lapsa-lib</groupId>
-		<artifactId>parent</artifactId>
+		<artifactId>lapsa-root</artifactId>
 		<version>2.2-SNAPSHOT</version>
 	</parent>
 
