--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.lapsa.lapsa-lib</groupId>
 		<artifactId>lapsa-root</artifactId>
-		<version>2.2</version>
+		<version>2.3-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>lapsa-utils</artifactId>
