--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<!-- BOMS -->
 		<javax-javaee-bom.version>7.0</javax-javaee-bom.version>
 		<payara-bom.version>4.1.2-1</payara-bom.version>
-		<java-commons.version>1.0</java-commons.version>
+		<java-commons.version>1.1-SNAPSHOT</java-commons.version>
 	</properties>
 
 	<dependencyManagement>
