--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 	<properties>
 		<!-- BOMS -->
 		<javax-javaee-bom.version>7.0</javax-javaee-bom.version>
-		<payara-bom.version>4.1.2-1</payara-bom.version>
+		<payara-bom.version>4.1.2-2-SNAPSHOT</payara-bom.version>
 		<java-commons.version>1.1-SNAPSHOT</java-commons.version>
 	</properties>
 
