--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>tech.lapsa.maven</groupId>
 		<artifactId>maven-general</artifactId>
-		<version>3.0</version>
+		<version>3.1</version>
 	</parent>
 
 	<groupId>com.lapsa.lapsa-lib</groupId>
@@ -20,7 +20,7 @@
 
 	<properties>
 		<!-- BOMS -->
-		<javax-javaee-bom.version>7.0</javax-javaee-bom.version>
+		<javax-javaee-bom.version>7.0a-SNAPSHOT</javax-javaee-bom.version>
 		<payara-bom.version>4.1.2-2-SNAPSHOT</payara-bom.version>
 		<java-commons.version>1.1-SNAPSHOT</java-commons.version>
 	</properties>
