--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>com.lapsa.lapsa-lib</groupId>
 	<artifactId>lapsa-root</artifactId>
-	<version>2.3</version>
+	<version>CURRENT-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Lapsa : Parent</name>
@@ -20,9 +20,9 @@
 
 	<properties>
 		<!-- BOMS -->
-		<javax-javaee-bom.version>7.0a</javax-javaee-bom.version>
-		<payara-bom.version>4.1.2-2</payara-bom.version>
-		<java-commons.version>1.1</java-commons.version>
+		<javax-javaee-bom.version>CURRENT-SNAPSHOT</javax-javaee-bom.version>
+		<payara-bom.version>CURRENT-SNAPSHOT</payara-bom.version>
+		<java-commons.version>CURRENT-SNAPSHOT</java-commons.version>
 	</properties>
 
 	<dependencyManagement>
