--- a/pom.xml
+++ b/pom.xml
@@ -59,9 +59,9 @@
 	</dependencyManagement>
 
 	<scm>
-		<connection>scm:git:https://gitlab.lapsa.tech/lapsa/lapsa-lib.git</connection>
-		<developerConnection>scm:git:https://gitlab.lapsa.tech/lapsa/lapsa-lib.git</developerConnection>
-		<tag>v2.3</tag>
+		<connection>scm:git:https://github.com/eurasia-insurance/oldies-lapsa-lib.git</connection>
+		<developerConnection>scm:git:https://github.com/eurasia-insurance/oldies-lapsa-lib.git</developerConnection>
+		<tag>HEAD</tag>
 	</scm>
 
 	<issueManagement>
