--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -10,7 +10,7 @@
 	<artifactId>lapsa-utils</artifactId>
 	<packaging>jar</packaging>
 
-	<name>Lapsa : Utils</name>
+	<name>Lapsa Lib : Utils</name>
 
 	<dependencies>
 		<!-- Java EE -->
