--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>com.lapsa.lapsa-lib</groupId>
 	<artifactId>lapsa-root</artifactId>
-	<version>20190103</version>
+	<version>CURRENT-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Oldies Lib : Lapsa Lib</name>
@@ -61,7 +61,7 @@
 	<scm>
 		<connection>scm:git:https://github.com/eurasia-insurance/oldies-lapsa-lib.git</connection>
 		<developerConnection>scm:git:https://github.com/eurasia-insurance/oldies-lapsa-lib.git</developerConnection>
-		<tag>v20190103</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 </project>
