--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.lapsa.lapsa-lib</groupId>
 		<artifactId>lapsa-root</artifactId>
-		<version>CURRENT-SNAPSHOT</version>
+		<version>20190110</version>
 	</parent>
 
 	<artifactId>lapsa-utils</artifactId>
