--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
 
 	<properties>
 		<!-- BOMS -->
-		<javax-javaee-bom.version>CURRENT-SNAPSHOT</javax-javaee-bom.version>
-		<payara-bom.version>CURRENT-SNAPSHOT</payara-bom.version>
-		<java-commons.version>CURRENT-SNAPSHOT</java-commons.version>
+		<javax-javaee-bom.version>20190317r6</javax-javaee-bom.version>
+		<payara-bom.version>20190317r6</payara-bom.version>
+		<java-commons.version>20190317r6</java-commons.version>
 	</properties>
 
 	<dependencyManagement>
